Cart icon fixxed padding

--- a/src/assets/scss/components/_woocommerce.scss
+++ b/src/assets/scss/components/_woocommerce.scss
@@ -241,6 +241,7 @@ html, body{
         transform: translate(10px , -10px);
         right: 0;
         top: 0;
+        padding: 0px 6px;
         p{
         margin-bottom: 0;
     }
