--- a/src/assets/scss/components/_woocommerce.scss
+++ b/src/assets/scss/components/_woocommerce.scss
@@ -227,6 +227,8 @@ html, body{
     display: flex;
     flex-direction: column;
     padding: 5px 5px;
+    display: flex;
+    justify-content: center;
     width: min-content;
     .otter_icon_title{
         margin-bottom: 0;
