Cart body fixxes.

--- a/src/assets/scss/components/_cart.scss
+++ b/src/assets/scss/components/_cart.scss
@@ -1,5 +1,6 @@
 .otter_footer_lines{
     padding-top: 15px;
+    line-height: 2;
 }
 .otter_footer_link{
     padding-right: 15px;
@@ -422,6 +423,9 @@ input.otter_item_quanity, input.otter_item_quanity:focus{
     font-size: 12px;
     display: flex;
     justify-content: space-between;
+    p{
+        margin-bottom: 0;
+    }
 }
 .otter_footer_products .otter_label{
     color: #000;
@@ -447,7 +451,7 @@ a.button-cart {
 	height: 46px;
 	border-radius: 40px;
 	position: relative;
-  transition: all 0.5s cubic-bezier(.7,0,.5,1.4);
+    transition: all 0.5s cubic-bezier(.7,0,.5,1.4);
 }
 
 li.product .button-cart {
