--- a/src/assets/scss/components/_woocommerce.scss
+++ b/src/assets/scss/components/_woocommerce.scss
@@ -323,7 +323,7 @@ html, body{
         padding: 10px;
     }
 }
-.otter_cart_title{
+.otter_head  .otter_head_title .otter_cart_title{
     margin-bottom: 0;
 }
 .otter_head{
