--- a/src/assets/scss/components/_woocommerce.scss
+++ b/src/assets/scss/components/_woocommerce.scss
@@ -275,6 +275,12 @@ html, body{
 }
 .otw-floating-cart{
     width: auto;
+    transition: ease 200ms;
+    animation: bounceOut .4s linear;
+    &.otw-woo-hide{
+        animation: none;
+        transform: scale(0);
+    }
 }
 .otter_open_count{
     text-align: center;
@@ -386,4 +392,23 @@ html, body{
     position: absolute;
     height: 20px;
     width: 100%;
+}
+.otw-woocommerce-single.otw-bottom .otw-woocommerce-header__content .product_title {
+    font-size: 1.3rem;
+}
+.otw-woocommerce-single.otw-bottom .otw-woocommerce-header__content .woocommerce-Price-amount {
+    font-size: 1rem;
+}
+@keyframes bounceOut {
+    0% {
+        transform: scale(0.1);
+        opacity: 0;
+      }
+      60% {
+        transform: scale(1.2);
+        opacity: 1;
+      }
+      100% {
+        transform: scale(1);
+      }
 }
