--- a/src/assets/scss/components/_woocommerce.scss
+++ b/src/assets/scss/components/_woocommerce.scss
@@ -275,8 +275,9 @@ html, body{
 }
 .otw-floating-cart{
     width: auto;
+    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition: ease 200ms;
-    animation: bounceOut .4s linear;
+    transform: scale(1);
     &.otw-woo-hide{
         animation: none;
         transform: scale(0);
@@ -398,17 +399,4 @@ html, body{
 }
 .otw-woocommerce-single.otw-bottom .otw-woocommerce-header__content .woocommerce-Price-amount {
     font-size: 1rem;
-}
-@keyframes bounceOut {
-    0% {
-        transform: scale(0.1);
-        opacity: 0;
-      }
-      60% {
-        transform: scale(1.2);
-        opacity: 1;
-      }
-      100% {
-        transform: scale(1);
-      }
 }
